--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@
 <body>
 
   <section class="container">
-    <a class="left-half" href="/umbvrella/">
+    <a class="left-half" href="{{site.url}}/umbvrella/">
       <article>
         <h1>Umb-Vr-Ela</h1>
       </article>
