New posts for dani, maiky and myself.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -80,7 +80,7 @@
         <h1>Umb-Vr-Ela</h1>
       </article>
     </a>
-    <a class="right-half" href="#">
+    <a class="right-half" href="{{site.url}}/zombies/">
       <article>
         <h1>No Country<br />for Zombies</h1>
       </article>
