--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,34 @@
-{% if page.title == "Home"
+{% if page.title == "Umbvrella"
+   or page.title == "Zombies"
    or page.title == "Blog"
    or page.title == "Projects"
-   or page.title == "Tags"
 %}{% assign showHeader = true %}{% endif %}
 
-{% if showHeader == true %}
-    <header class="header-home {% if site.animation %}animated{% endif %}" style="margin-top: 100px; margin-bottom: 100px;">
-        {% if site.about %}
-            <a class="link" href="{{ site.url }}/about">
-                <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
-            </a>
-        {% else %}
-            <span class="link">
-                <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
-            </span>
-        {% endif %}
+{% if showHeader == true and page.title == "Umbvrella" %}
+  <header class="header-home {% if site.animation %}animated{% endif %}" style="margin-top: 100px; margin-bottom: 100px;">
+      {% if site.about %}
+          <a class="link" href="{{ site.url }}/about">
+              <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+          </a>
+      {% else %}
+          <span class="link">
+              <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+          </span>
+      {% endif %}
 
-        <h1 class="title">{{ site.name }}</h1>
-        <h2 class="description">{{ site.bio }}</h2>
+      <h1 class="title">{{ site.name }}</h1>
+      <h2 class="description">{{ site.bio }}</h2>
 
-        {% include social-links.html %}
-    </header>
+      {% include social-links.html %}
+  </header>
+{% endif %}
+
+{% if showHeader == true and page.title == "Zombies" %}
+  <header class="header-home {% if site.animation %}animated{% endif %}" style="margin-top: 100px; margin-bottom: 100px;">
+
+      <h1 class="title">NO COUNTRY FOR ZOMBIES</h1>
+      <h2 class="description">A game based on Android and Microsoft Pixelsense where one team has to create zombies and the other team has to find them and kill them to win.</h2>
+
+      {% include social-links.html %}
+  </header>
 {% endif %}
